WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42342
Font download error for an @font-face rule invalidates other @font-face rules for the same font-family
https://bugs.webkit.org/show_bug.cgi?id=42342
Summary
Font download error for an @font-face rule invalidates other @font-face rules...
Yuzo Fujishima
Reported
2010-07-15 00:51:17 PDT
Assume that we have the following file and CannotBeDownloaded.ttf cannot be downloaded while Ahem.ttf can. As per
http://lists.w3.org/Archives/Public/www-style/2010Jul/0253.html
, the first rule must remain in effect while the second rule must be ignored. WebKit
r63408
ignores both rules. Note that if src: url(CannotBeDownloaded.ttf); is replaced with src: local(NonExistentLocalFont); or src: url(CannotBeDownloaded.ttf), local(Arial); , the first rule remains in effect and WebKit renders the file properly. <style> @font-face { font-family:myfont; src: url(Ahem.ttf); } @font-face { font-family:myfont; src: url(CannotBeDownloaded.ttf); unicode-range: U+30-39; } </style> <p> The first @font-face rule above should remain in effect even if the font for the second @font-face rule cannot be downloaded. Accordingly, the following text should be shown in Ahem. </p> <span style="font-family:myfont"> This must be shown in Ahem. </span>
Attachments
Proposed fix
(9.14 KB, patch)
2010-07-15 04:47 PDT
,
Yuzo Fujishima
no flags
Details
Formatted Diff
Diff
Patch
(9.71 KB, patch)
2010-07-19 21:49 PDT
,
Yuzo Fujishima
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yuzo Fujishima
Comment 1
2010-07-15 04:47:45 PDT
Created
attachment 61641
[details]
Proposed fix
mitz
Comment 2
2010-07-17 09:58:58 PDT
Comment on
attachment 61641
[details]
Proposed fix Please fill in the WebCore change log.
Yuzo Fujishima
Comment 3
2010-07-19 21:49:17 PDT
Created
attachment 62032
[details]
Patch
Yuzo Fujishima
Comment 4
2010-07-19 21:52:11 PDT
Hi, Thank you for the review. In WebCore/ChangeLog, I've added a comment to each method. Yuzo
Yuzo Fujishima
Comment 5
2010-07-19 22:10:26 PDT
Committed
r63719
: <
http://trac.webkit.org/changeset/63719
>
Csaba Osztrogonác
Comment 6
2010-07-19 23:10:42 PDT
(In reply to
comment #5
)
> Committed
r63719
: <
http://trac.webkit.org/changeset/63719
>
fast/css/font-face-download-error.html introduced in
r63719
fails on Qt bot:
http://build.webkit.org/results/Qt%20Linux%20Release/r63720%20%2815746%29/fast/css/font-face-download-error-pretty-diff.html
Could you check it, please?
Yuzo Fujishima
Comment 7
2010-07-19 23:23:22 PDT
Committed
r63722
: <
http://trac.webkit.org/changeset/63722
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug