2010-07-15  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Dan Bernstein.

        Fix for Bug 42342 - Font download error for an @font-face rule invalidates other @font-face rules for the same font-family
        https://bugs.webkit.org/show_bug.cgi?id=42342

        * fast/css/font-face-download-error-expected.txt: Added.
        * fast/css/font-face-download-error.html: Added.
2010-07-15  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Dan Bernstein.

        Fix for Bug 42342 - Font download error for an @font-face rule invalidates other @font-face rules for the same font-family
        https://bugs.webkit.org/show_bug.cgi?id=42342

        Test: fast/css/font-face-download-error.html

        * css/CSSSegmentedFontFace.cpp:
        (WebCore::CSSSegmentedFontFace::isValid): Valid if at least one font
        face is valid.
        (WebCore::CSSSegmentedFontFace::getFontData): Check validity for each
        font face.
        * css/CSSSegmentedFontFace.h: Make isValid private.

Canonical link: https://commits.webkit.org/54557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63719 268f45cc-cd09-0410-ab3c-d52691b4dbfc